added new Juint